--- a/app/views/admin_suite/resources/edit.html.erb
+++ b/app/views/admin_suite/resources/edit.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <!-- Form -->
-  <div class="bg-white rounded-xl border border-slate-200 overflow-hidden">
+  <div class="bg-white dark:bg-slate-800 rounded-xl border border-slate-200 dark:border-slate-700 overflow-visible">
     <div class="p-6">
       <%= render "admin_suite/shared/form", resource: @resource %>
     </div>
